[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tui-globe-build-geo"
version = "0.1.0"
description = "Generate tui-globe's .gl geometry buffers from Natural Earth shapefiles."
requires-python = ">=3.10"
dependencies = [
    "pyshp >=2.3, <3",
    "mapbox-earcut >=1.0, <2",
    "numpy >=1.24, <3",
]

[project.scripts]
build-geo = "build_geo:main"

[tool.hatch.build.targets.wheel]
only-include = ["build_geo.py"]

[tool.hatch.build.targets.wheel.sources]
"build_geo.py" = "build_geo.py"
